docusaurus/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

/*
:root {
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}
*/

:root {
  --ifm-color-primary: #0969da;
  --ifm-color-primary-dark: #085ec4;
  --ifm-color-primary-darker: #0859b9;
  --ifm-color-primary-darkest: #064999;
  --ifm-color-primary-light: #0a73f0;
  --ifm-color-primary-lighter: #1079f5;
  --ifm-color-primary-lightest: #318cf6;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/*
:root {
  --ifm-color-primary: #2a606d;
  --ifm-color-primary-dark: #265662;
  --ifm-color-primary-darker: #24525d;
  --ifm-color-primary-darkest: #1d434c;
  --ifm-color-primary-light: #2e6a78;
  --ifm-color-primary-lighter: #306e7d;
  --ifm-color-primary-lightest: #377d8e;
}
*/

/* For readability concerns, you should choose a lighter palette in dark mode. */
/*
[data-theme='dark'] {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}
*/

[data-theme='dark'] {
  --ifm-color-primary: #fbb03b;
  --ifm-color-primary-dark: #faa41d;
  --ifm-color-primary-darker: #fa9e0d;
  --ifm-color-primary-darkest: #d58304;
  --ifm-color-primary-light: #fcbc59;
  --ifm-color-primary-lighter: #fcc269;
  --ifm-color-primary-lightest: #fdd596;
}

/* https://blog.webdevsimplified.com/2020-12/responsive-css-video/ */
.video-container {
  position: relative;
  padding-bottom: calc(var(--aspect-ratio, 0.5625) * 100%);
  height: 0;
  width: 100%;
}

.video-container iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.video-container object {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

